<resources>
    <string name="app_name">EASY WAY</string>
    <string name="sign_in_email">Enter your email</string>
    <string name="sign_in_pass">Enter your Password</string>
    <string name="Name_signup">Enter your name</string>
    <string name="St_id_signup">Enter your ID</string>
    <string name="Confirm_pass_signup"> Confirm password</string>
    <string name="Age_signup"> your Age</string>
    <string name="Handicap_spinner_signup">Select one of the below</string>
    <string name="Location_spinner_signup">Select one of the below</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Main</string>

</resources>